--- a/rajveer project/second.html
+++ b/rajveer project/second.html
@@ -52,7 +52,7 @@
                 margin-left: 200px;
                 font-family: Arial, Helvetica, sans-serif;
                 font-weight: bold;
-                font-size: 8vh;
+                font-size: 7vh;
                 
             }
             .wow{
@@ -91,7 +91,7 @@
             <img class="image" src="Backgrounds/background2.jpg">
         </div>
         <p class="text">
-            Rajveer Sahay Co.
+            Rajveer's WorkShop Team - 1 
         </p>
         <p class="snd">
             Contact
@@ -106,10 +106,10 @@
             Home
         </p>
         <p class="ssl">
-            Empathy Over Apathy: Tackling Poverty Worldwide
+            SoilSense: Real-Time Monitoring and Analysis for Your Farm
         </p>
         <p class="wow">
-            By fostering empathy, we ignite a collective force that transcends borders, dismantles indifference, and drives us to actively combat poverty on a global scale.
+            Get real-time insights into your soil's health with SoilSense. Our easy-to-use platform empowers you to make informed decisions for optimal farm health. Maximize yields and grow with confidence.
         </p>
         <form id="ButtonPress">
             <button type="submit">
