--- a/rajveer project/third.html
+++ b/rajveer project/third.html
@@ -90,19 +90,8 @@
             Home
         </p>
         <p class="wow">
-            In a world often numbed by indifference, the clarion call for empathy reverberates louder than ever.
-             Empathy bridges the chasm between privilege and need, urging us to see beyond our own circumstances. 
-             It is the antidote to apathy, compelling us to act, to extend a hand to those ensnared by poverty’s grip. 
-             As we embrace empathy, we become catalysts for change—advocating, volunteering, and amplifying the voices of the marginalized.
-              Together, we dismantle the barriers that perpetuate poverty, replacing them with bridges of compassion and understanding.
-               Our collective empathy ignites a fire of transformation, illuminating the darkest corners of inequality.
-                We recognize that poverty is not an abstract statistic; it is a lived reality for millions. 
-                Through empathy, we forge alliances across borders, transcending language, culture, and distance.
-                 We listen to the stories of resilience, courage, and survival, etching them into our hearts. 
-                 Empathy propels us to address systemic issues, advocating for fair wages, accessible education, and healthcare.
-                  It drives us to support grassroots initiatives, empowering communities to break free from the cycle of poverty.
-                   In this shared endeavor, empathy becomes our currency, exchanged freely to uplift humanity. 
-                   Let us stand united, fueled by empathy, to create a more just and equitable world.” 🌍🤝❤️
+            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2456155/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2456155/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
    
         </p>
     </body>
